k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-alert-system
  namespace: default
  labels:
    app: policy-alert-system
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: policy-alert-system
  template:
    metadata:
      labels:
        app: policy-alert-system
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: app
          image: ghcr.io/s1998raghu/policy-alert-system:v2
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: db-storage
              mountPath: /app/data
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: policy-alert-pvc
